source-sass/_elements.scss
// Orange bold text for emphasising facts
.emph {
  font-family: $header-font;
  color: $light-orange;
  text-transform: uppercase;
  font-weight: normal;
  letter-spacing: 1px;

  @media #{$medium-up} {
    font-size: 108%;
  }

  @media #{$large-up} {
    font-size: 115%;
  }
}

.emph--block {
  display: block;
}


// Icons
.xsmall-icon,
.small-icon {
  width: 45px;
  height: 45px;

  @media #{$medium-up} {
    width: 65px;
    height: 65px;
  }

  @media #{$large-up} {
    width: 100px;
    height: 100px;
  }
}

.small-icon {

  @media #{$small-only} {
    width: 50px;
    height: 50px;
  }
}

.large-icon {
  width: 55px;
  height: 55px;

  @media #{$medium-up} {
    width: 85px;
    height: 85px;
  }

  @media #{$large-up} {
    width: 135px;
    height: 135px;
  }
}


// Pie charts
.pie {
  position: relative;
  width: 70px;
  height: 70px;
  line-height: 70px;
  border-radius: 50%;
  margin: 0 auto 1rem;
  background: darken($juicy-orange, 15%);
  background-image: linear-gradient(to right, transparent 50%, darken($juicy-orange, 7%) 0);
  color: transparent;
  text-align: center;
  box-shadow: 0 0 15px 0 rgba($dark-blue, 0.1);

  &:before {
    content: '';
    position: absolute;
    top: 0;
    left: 50%;
    width: 50%;
    height: 100%;
    border-radius: 0 100% 100% 0 / 50%;
    background-color: inherit;
    transform-origin: left;
    animation: spin 50s linear infinite,
               bg 100s step-end infinite;
    animation-play-state: paused;
    animation-delay: inherit;
  }

  @media #{$medium-up} {
    width: 100px;
    height: 100px;
    line-height: 100px;
  }

  @media #{$large-up} {
    width: 140px;
    height: 140px;
    line-height: 140px;
  }

  span {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    text-align: center;
    font-size: 1.5rem;
    font-family: $header-font;
    color: darken($juicy-orange, 35%);
    text-shadow: 1px 1px 1px $juicy-orange;

    @media #{$large-up} {
      font-size: 3rem;
    }
  }
}

@keyframes spin {
  to { transform: rotate(.5turn); }
}
@keyframes bg {
  50% { background: darken($juicy-orange, 7%); }
}


// Fact badge
.fact-badge {
  display: inline-block;
  margin: 0 auto 0.5rem;
  padding: 0.5rem 0.6125em 0.45rem;
  font-size: 1.125rem;
  font-family: $header-font;
  color: darken($juicy-orange, 35%);
  text-transform: uppercase;
  text-shadow: 1px 1px 2px lighten($juicy-orange, 12%);
  background: $juicy-orange;
  box-shadow: inset 0 0 10px 2px darken($juicy-orange, 10%);
  border-radius: 5px;

  @media #{$medium-up} {
    margin-bottom: 0.75rem;
    padding: 0.575rem 0.75rem 0.5rem;
    font-size: 1.375rem;
  }

  @media #{$large-up} {
    margin-bottom: 1rem;
    padding: 0.625rem 1rem 0.575rem;
    font-size: 1.75rem;
  }
}


// Facts -- big pretty numbers

// TODO: needs refactoring

.fact {
  display: inline-block;
  margin: 0;
  vertical-align: middle;
  color: #888;
  line-height: 1;

  span {
    display: block;
    margin: 0 auto 0.125rem;
    color: $juicy-orange;
    font-size: 2.5rem;
    font-family: $header-font;
    text-transform: uppercase;
    line-height: 1;

    @media #{$medium-up} {
      margin: 0.5rem auto;
    }

    @media #{$large-up} {
      margin: 1rem auto;
    }
  }

  small {
    display: block;
    margin: 0;
    font-family: $body-font-family;
    text-transform: none;
    color: #eee;
  }
}


.block-grid--facts {

  .fact + .emph {
    display: block;
    color: #fff;
  }

  .fact span {
    // TODO:
    color: $light-orange !important;
  }

  ul object {
    // TODO:
    margin-bottom: 0.25rem !important;
  }
}

  .fact--small {

    span {
      font-size: 1.5rem;

      @media #{$medium-up} {
        font-size: 1.875rem;
      }

      @media #{$large-up} {
        font-size: 2.2125rem;
      }
    }

    + .emph {
      font-size: 75%;
    }
  }

  .fact--large span {
    font-size: 2.5rem;

    @media #{$medium-up} {
      font-size: 3.125rem;
    }

    @media #{$large-up} {
      font-size: 4.6125rem;
    }
  }


// Orange circles with ripple/pulse effect
.circle-container {
  position: relative;
  display: block;
  width: 100%;
  margin: 0 auto;
  color: darken($juicy-orange, 35%);
  text-shadow: 1px 1px 2px lighten($juicy-orange, 12%);

  @media #{$medium-up} {
    width: 50%;
  }

  &:after {
    content: "";
    display: block;
    position: relative;
    z-index: 8;
    width: 50%;
    height: 0;
    margin: 0 auto;
    padding-bottom: 50%;
    border-radius: 50%;
    background: $juicy-orange;
    box-shadow: inset 0 0 10px 10px darken($juicy-orange, 10%);

    @media #{$medium-up} {
      width: 100%;
      padding-bottom: 100%;
    }
  }

  .content {
    position: absolute;
    top: 15%;
    left: 50%;
    z-index: 10;
    -ms-transform: translate(-50%, 50%);
        transform: translate(-50%, 50%);
    text-align: center;
    font-family: $header-font;
    font-size: 1.5rem;

    @media #{$medium-up} {
      top: 0%;
      left: 50%;
      font-size: 2.5rem;
    }

    @media #{$large-up} {
      top: 10%;
    }
  }

  .dot {
    border: 5px solid $light-orange;
    background: transparent;
    border-radius: 50%;
    height: 175px;
    width: 175px;
    position: absolute;
    top: -50%;
    left: 0;
    z-index: 1;
    animation: pulse 3s ease-out infinite;
    opacity: 0;

    @media #{$medium-up} {
      width: 150%;
      height: 150%;
      top: -25%;
      left: -25%;
      border-width: 7px;
    }
  }
}

